--- a/style.css
+++ b/style.css
@@ -351,6 +351,7 @@ button {
 @media screen and (max-width: 450px) {
     body {
         font-size: 14px;
+        background-position: 60% center;
     }
 
     .brand {
