--- a/style.css
+++ b/style.css
@@ -323,6 +323,7 @@ button {
     .box {
         height: 300px;
         width: 90%;
+        margin: 1.5em auto 2em;
     }
 
     .main form {
@@ -363,10 +364,6 @@ button {
 
     .brand {
         font-size: 10px;
-    }
-
-    .box {
-        display: none;
     }
 
     .move {
